<resources>
    <string name="app_name">多点优选</string>
    <string name="app_versionname">多点优选</string>
    <string name="shareapp_text">您不能不知道的淘宝天猫购物省钱内幕，薅羊毛首席攻略，惊天动地，就在这里</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="sevice_weixin_num">mh13263</string>
    <string name="appstart_adtext">购物返利 天天都是双11</string>
    <string name="fulidingdan_rule_str">1、申请【我要福利】--进入详情页-邀请好 友支持。\n\n2、获得规定的邀请人数即可获得福利资格。\n\n3、当福利份数为50份，如已被领完了，那 么您的好友将看到【名额已满】。\n\n4、为营造一个公平公正的福利发放让更多 的用户收益，防止有几个号的用户自助式的 获得福利商品，平台规定，您名下的好友在 一定时间段内（暂定为三个月）只可以帮助 您一次。\n\n5、福利商品不允许申请退款，否则将会受 到处罚且不再享受福利资格。 </string>
    <string name="invite_digits_code">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pwd_digits_code">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-/:;()$&amp;@.,?![]{}#%^*+=_\|~&lt;&gt;€£¥</string>
    <string name="awards_list_title">获奖名单</string>
    <string name="register">注册</string>
    <string name="msg_login">短信验证码登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_phone_num">修改手机号</string>
    <string name="my_goods_address">我的收货地址</string>
    <string name="message_setting">消息设置</string>
    <string name="message_notification">消息设置</string>
    <string name="modify_service_wechat">专属微信</string>
    <string name="find_password">找回密码</string>
    <string name="edit_template">编辑模板</string>
    <string name="edit_template_hint">请不要修改"｛｝"之间的文字哦~</string>
    <string name="preview">预览</string>
    <string name="save">保存</string>
    <string name="save_img">保存图片</string>
    <string name="explain">说明</string>
    <string name="explain1"><![CDATA[1.{%1$s}表示商品标题，<br />2.{%2$s}表示在售价格，<br />3.{%3$s}表示券后价格，<br />4.{%4$s}表示商品推荐语，可为空<br />5.{%5$s}表示下单链接<br />6.{切换长链}用于电脑打开的用户<br />7.{切换短链}用于手机端打开的用户]]></string>
    <string name="invitation_code">邀请码： %1$s</string>
    <string name="copy">复制</string>
    <string name="copy_invitation">复制邀请码</string>
    <string name="vip">会员</string>
    <string name="vip1">VIP</string>
    <string name="vip2">运营专员</string>
    <string name="bind_phone_num">绑定新手机</string>
    <string name="bind_hind"> 如未设置密码,请先前往修改;如没有实名名称,请先前往实名支付宝!</string>
    <string name="main_circle_hotday">每日爆款</string>
    <string name="main_circle_adv">宣传素材</string>
    <string name="goodsShertError">商品优惠券已领完，请重新选择商品</string>
    <string name="ago">前</string>
    <string name="years">年</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="day">天</string>
    <string name="hours">小时</string>
    <string name="minutes">分钟</string>
    <string name="secknds">秒</string>
    <string name="just_now">现在</string>
    <string name="coupon">¥%1$s</string>
    <string name="coupon_add_text">券后¥%1$s</string>
    <string name="submit">确认提交</string>
    <string name="goods_edit_template_null">模板不能为空</string>
    <string name="goods_edit_shao">缺少必填内容</string>
    <string name="next_step">下一步</string>
    <string name="income">¥ %1$s</string>
    <string name="income_yuan">%1$s元</string>
    <string name="commission">预估收益%1$s元</string>
    <string name="mcommission">赚 ¥ %1$s</string>
    <string name="upgrade_commission">升级收益</string>
    <string name="exclusiveWechat">专属客服微信：%1$s</string>
    <string name="recommend">推荐词</string>
    <string name="confirm">确定</string>
    <string name="confirm_z">朕知道啦</string>
    <string name="loading">加载中...</string>
    <string name="welfare_rule">福利规则</string>
    <string name="save_img_succeed">亲爱的，图片已经保存了哦</string>
    <string name="img_save_to">图片保存到%s 请查看</string>
    <string name="order_audit">订单号正在审核中，请不要重复提交</string>
    <string name="call_premission_camera">请开启相机权限</string>
    <string name="call_premission_read_sd">请开启读写文件权限</string>
    <string name="share_exemption">“需要邀请%1$s人注册，即可获得免单资格”</string>
    <string name="commission_income">+%1$s</string>
    <string name="commission_expend">-%1$s</string>
    <string name="input_invitation_code">请输入邀请码</string>
    <string name="skip">跳过</string>
    <string name="please_set_password">请设置您的密码</string>
    <string name="exclusive_wechat">您的专属客服微信</string>
    <string name="text_exclusive_wechat">客服微信：%1$s</string>
    <string name="text_exclusive_wechat_hint">温馨提示：您也可以在【个人中心】【专属客服】中添加专属客服微信喔~</string>
    <string name="finish">完成</string>
    <string name="send_msg">重新发送</string>
    <string name="input_verifycode">请输入短信验证码</string>
    <string name="count_down">%1$s秒后重发</string>
    <string name="send_phone">验证码已发送至 +86 %1$s</string>
    <string name="net_work_text">网络请求失败，请检查您的网络设置</string>
    <string name="start_buy">已开抢</string>
    <string name="next_advance">下期预告</string>
    <string name="return_detail">返现明细</string>
    <string name="not_perfect_order">待完善订单</string>
    <string name="wait_audit">等待审核订单</string>
    <string name="finish_order">完成订单</string>
    <string name="look_order">查看订单</string>
    <string name="rights_info">维权描述</string>
    <string name="apply_terrce">申请平台介入</string>
    <string name="wq">维权</string>
    <string name="submit_text">提交</string>
    <string name="reasons_refusal">拒绝理由：</string>
    <string name="description">描述：</string>
    <string name="edit_problem">请输入您遇到的问题</string>
    <string name="order_code">订单号：%s  </string>
    <string name="stay_perfect">待完善</string>
    <string name="stay_audit">等待审核</string>
    <string name="stay_pass">审核通过</string>
    <string name="stay_reject">审核拒绝</string>
    <string name="edit_order_success">填写订单号成功</string>
    <string name="affirm_order_success">确定订单成功</string>
    <string name="feedback">反馈</string>
    <string name="shocking_price">惊爆价:%s 元</string>
    <string name="join_number">已参加:%s人</string>
    <string name="return_moeny">返:%s元</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="i_know">朕知道啦</string>
    <string name="immediately_invited">立即邀请</string>
    <string name="no_evaluation">未评价</string>
    <string name="the_goods">确定收货</string>
    <string name="edit_null">似乎没有修改什么哦</string>
    <string name="order_form">订单</string>
    <string name="fans">%1$s人</string>
    <string name="orders">%1$s单</string>
    <string name="legal_rightsing">维权中</string>
    <string name="legal_rights_succeed">维权成功</string>
    <string name="legal_rights_reject">维权拒绝</string>
    <string name="legal_rights_error">维权失败</string>
    <string name="data_null">暂无数据</string>
    <string name="dtae_error">网络丢失</string>
    <string name="invite_number">邀请：%1$s人</string>
    <string name="save_to_photo">保存至相册</string>
    <string name="coayTextSucceed">复制成功</string>
    <string name="call_phone">拨打</string>
    <string name="editor">管理</string>
    <string name="delete_success">删除成功</string>
    <string name="capy_comment">复制评论</string>
    <string name="my_invite_code">我的邀请码: %s</string>
    <string name="mack_step">会员权益</string>
    <string name="mack_plan">赚钱计划</string>
    <string name="apply_updata">申请升级</string>
    <string name="income_earnings">今日预估收益</string>
    <string name="e_month_earnings">本月预估收益</string>
    <string name="contact_relation">马上联系</string>
    <string name="choiceness">精选</string>
    <string name="what_like">猜你喜欢</string>
    <string name="ranking">爆款排行</string>
    <string name="my_earnings">我的收益</string>
    <string name="earnings">我的收益</string>
    <string name="my_team">我的粉丝</string>
    <string name="order_detail">订单明细</string>
    <string name="share_friends">分享好友</string>
    <string name="my_publish">发布管理</string>
    <string name="offen_question">常见问题</string>
    <string name="order_search">订单查询</string>
    <string name="my_footmarker">足迹</string>
    <string name="my_favorite">我的收藏</string>
    <string name="other_service">其他服务</string>
    <string name="new_help">新人课堂</string>
    <string name="favorite">我的收藏</string>
    <string name="service">专属客服</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="like">五星好评</string>
    <string name="about">关于我们</string>
    <string name="official_notice">官方公告</string>
    <string name="attract_cooperation">招商合作</string>
    <string name="complaint_suggestion">投诉建议</string>
    <string name="find_splendid">发现精彩</string>
    <string name="sales">销量：%1$s</string>
    <string name="msales">月销%1$s</string>
    <string name="current_taobao">淘宝</string>
    <string name="current_pdd">拼多多</string>
    <string name="current_jd">京东</string>
    <string name="current_wph">唯品会</string>
    <string name="current_ranking">实时排行</string>
    <string name="pdd_tab">拼多多</string>
    <string name="today_ranking">今日排行</string>
    <string name="yuan">%1$s元券</string>
    <string name="brand_sell">品牌特卖</string>
    <string name="discount_coupon">优惠券：%1$s元</string>
    <string name="check_more">查看更多</string>
    <string name="order_a">A级</string>
    <string name="order_b">B级</string>
    <string name="order_c">团队</string>
    <string name="order_all">全部</string>
    <string name="order_wait_pay">待支付</string>
    <string name="order_play">已付款</string>
    <string name="order_receive_goods">待收货</string>
    <string name="order_close">已结算</string>
    <string name="order_invalid">已失效</string>
    <string name="order_closed">已关闭</string>
    <string name="share_moeny">预估收益:%s元</string>
    <string name="goods_share_moeny">立即分享\n赚¥%s</string>
    <string name="also_collect">已收藏</string>
    <string name="collect">收藏</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="cancel_collect_succeed">取消收藏成功</string>
    <string name="shop_no_goods">店铺没有更多商品</string>
    <string name="coupon_price">%1$s元优惠券</string>
    <string name="tiem_sale">每日推荐</string>
    <string name="taoqianggou">淘抢购</string>
    <string name="jvhuasuan">聚划算</string>
    <string name="my_collect">我的收藏</string>
    <string name="nine_pinkage">9块9</string>
    <string name="seckill">限时秒杀</string>
    <string name="bill_details">账单详情</string>
    <string name="balance">账户余额 (元)</string>
    <string name="withdraw">提现</string>
    <string name="rule">规则说明</string>
    <string name="dialog_today_money">在今日内确认收货的订单，包括上月的订单在今日确定的</string>
    <string name="dialog_today_estimate_money">今日订单，还没确认收货的佣金</string>
    <string name="dialog_yesterday_money">在昨日内确认收货的订单，包括上月的订单在昨日确定的</string>
    <string name="dialog_yesterday_estimate_money">昨日订单，还没有确认收货的佣金</string>
    <string name="dialog_month_estimate_money">在本月内确认收货的订单，包括上月的订单在本月内确认的。</string>
    <string name="dialog_month_money">本月卖出去的所有钱（佣金）</string>
    <string name="dialog_last__month_estimate_money">本月25号可提现金额。（如果该数据为0，即本月不可提现）</string>
    <string name="dialog_last_month_money">上月卖出去的所有钱（佣金）</string>
    <string name="dialog_payment_count">当日付款笔数</string>
    <string name="tutorial">新手教程</string>
    <string name="official_recom">官方推荐</string>
    <string name="login_error">登录失败</string>
    <string name="discount_stores">店铺优惠</string>
    <string name="goods_browsing_history">我的足迹</string>
    <string name="team_wechat">团队管理微信</string>
    <string name="team_wechat_hint">便于您的粉丝和推荐人联系您</string>
    <string name="service_text">客服</string>
    <string name="submit_wechat_ewm">点击上传二维码</string>
    <string name="clear">清空</string>
    <string name="switch_shore_link">切换短链</string>
    <string name="login_input_very_code">请您输入验证码</string>
    <string name="very_code_sended">验证码已发送至</string>
    <string name="login_account">密码登录</string>
    <string name="default_template">恢复默认模版</string>
    <string name="update_vip1_earnings">即可获收益%s元</string>
    <string name="update_vip2_earnings">最高可获收益%s元</string>
    <string name="estimate_earnings">收益%s元</string>
    <string name="to_update">去升级</string>
    <string name="update_vip">升级VIP</string>
    <string name="open_push_head">开启消息通知提醒</string>
    <string name="open_push_com1">收益通知，所有收益尽在手中</string>
    <string name="open_push_com3">新粉丝提醒，每个粉丝都不错过</string>
    <string name="to_open">去开启</string>
</resources>