<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include layout="@layout/top"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/color_F5F5F5"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_white_round_5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_copy"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:gravity="top"
                    android:hint=""
                    android:padding="13dp"
                    android:textColorHint="@color/color_333333"
                    android:textSize="13sp"
                    android:windowSoftInputMode="stateHidden"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">

                    <TextView
                        android:id="@+id/tv_default_template"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_1yellowline_whitebg_round_30dp"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:layout_marginRight="9dp"
                        android:text="@string/default_template"
                        android:textColor="@color/color_333333"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_switcher_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="12dp"
                        android:layout_marginRight="9dp"
                        android:background="@drawable/bg_000000_1dpline_yellowbg_round_15dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="5dp"
                        android:text="@string/switch_shore_link"
                        android:textColor="@color/color_333333"
                        android:textSize="12sp"
                        />


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/edit_template_hint"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_white_round_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_explain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="22dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginTop="32dp"
                        android:lineSpacingExtra="4dp"
                        android:lineSpacingMultiplier="1.3"
                        android:text="@string/explain1"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/sp_13"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_template_round_30dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="11dp"
                    android:paddingRight="17dp"
                    android:paddingTop="4dp"
                    android:text="@string/explain"
                    android:textColor="@color/color_333333"
                    android:textSize="13sp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_preview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_1yellowline_whitebg_round_30dp"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/preview"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_000000_1dpline_yellowbg_round_15dp"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="14dp"
                    android:text="@string/save"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>