<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:src="@drawable/main_open_push_head"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/open_push_head"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/main_open_push_icon1"
                        android:drawablePadding="9dp"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/open_push_com1"
                        android:textColor="@color/color_666666"
                        android:textSize="14sp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:drawableLeft="@drawable/main_open_push_icon3"
                        android:drawablePadding="9dp"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/open_push_com3"
                        android:textColor="@color/color_666666"
                        android:textSize="14sp"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_to_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/submit_buttom_feed"
                    android:paddingBottom="8dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="8dp"
                    android:text="@string/to_open"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_15"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:src="@drawable/icon_close_dialog"/>
    </LinearLayout>
</RelativeLayout>