<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/icon_login_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/color_333333"
                android:textSize="33sp"
                tools:text="@string/login_input_very_code" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_code_sended"
                    android:textColor="@color/color_999999"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/areaCodeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+86"
                    android:textColor="@color/color_E18400"
                    android:textSize="14sp"
                    android:layout_marginLeft="4dp"/>
                <TextView
                    android:id="@+id/text_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_E18400"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>



            <com.jkb.vcedittext.VerificationCodeEditText
                android:id="@+id/verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:inputType="number"
                android:textColor="@color/color_333333"
                android:textIsSelectable="true"
                android:textSize="24sp"
                app:bottomLineHeight="1dp"
                app:bottomLineNormalColor="@color/color_999999"
                app:bottomLineSelectedColor="@color/color_999999"
                app:figures="4"
                app:selectedBackgroundColor="@color/transparent"
                app:verCodeMargin="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/accountLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/login_account"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="34dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_white_stroke_333333_30dp"
                    android:enabled="false"
                    android:paddingBottom="4dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="4dp"
                    android:text="@string/send_msg"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>



</LinearLayout>